[gd_scene load_steps=6 format=3 uid="uid://bi86ie4yif8ce"]

[ext_resource type="Script" uid="uid://bislvg28mr0u0" path="res://resources/gui.gd" id="1_civx4"]
[ext_resource type="Theme" uid="uid://m4hgpxspbw5h" path="res://resources/theme.tres" id="1_wj7ow"]
[ext_resource type="Texture2D" uid="uid://b0nujvcvoy3su" path="res://assets/spaceship.png" id="3_yq3y4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yq3y4"]
bg_color = Color(0.116029, 0.00010217, 0.182063, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.729412, 0.572549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w1th5"]
bg_color = Color(0.117647, 0, 0.180392, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0.729412, 0.572549, 1)

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wj7ow")
script = ExtResource("1_civx4")

[node name="ScoreBox" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
size_flags_horizontal = 0
size_flags_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="ScoreBox"]
layout_mode = 0
offset_right = 220.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yq3y4")

[node name="Score" type="Label" parent="ScoreBox"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 109.0
offset_bottom = 60.0
theme = ExtResource("1_wj7ow")
text = "1000"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.0925926
anchor_right = 0.190972
anchor_bottom = 0.154321
metadata/_edit_use_anchors_ = true

[node name="lifeOne" type="Sprite2D" parent="Control"]
unique_name_in_owner = true
position = Vector2(14, 14)
rotation = 4.71239
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_yq3y4")

[node name="lifeTwo" type="Sprite2D" parent="Control"]
unique_name_in_owner = true
position = Vector2(40, 14)
rotation = 4.71239
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_yq3y4")

[node name="lifeThree" type="Sprite2D" parent="Control"]
unique_name_in_owner = true
position = Vector2(66, 14)
rotation = 4.71239
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_yq3y4")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -397.5
offset_top = -219.0
offset_right = 397.5
offset_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w1th5")

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.5
offset_top = -30.0
offset_right = 120.5
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over!"
